[project]
name = "queuesky"
version = "0.1.0"
description = ""
authors = [
    {name = "Willow Griffiths",email = "willowgriffiths@proton.me"}
]
license = "MIT"
requires-python = ">=3.12,<3.15"
dependencies = [
    "django (>=6.0.6,<7.0.0)",
    "atproto (>=0.0.67,<0.0.68)",
    "requests (>=2.34.2,<3.0.0)",
    "cryptography (>=41.0.7,<47)",
    "authlib (>=1.7.2,<2.0.0)",
    "pyjwt (>=2.13.0,<3.0.0)",
    "psycopg2-binary (>=2.9.12,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.vercel.scripts]
build = "./build"
